Thesis/force-app/main/default/objects/Shelter__c/fields/Capability__c.field-meta.xml
<CustomField>
    <fullName>Capability__c</fullName>
    <label>Capability</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>