Thesis/force-app/main/default/objects/Shelter__c/fields/MaintenanceCost__c.field-meta.xml
<CustomField>
    <fullName>MaintenanceCost__c</fullName>
    <label>Maintenance cost/month</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>