Thesis/force-app/main/default/objects/Shelter__c/fields/ShelterCity__c.field-meta.xml
<CustomField>
    <fullName>ShelterCity__c</fullName>
    <label>City</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>