Thesis/force-app/main/default/objects/Shelter__c/fields/ShelterCountry__c.field-meta.xml
<CustomField>
    <fullName>ShelterCountry__c</fullName>
    <label>Country</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>