Thesis/force-app/main/default/objects/Shelter__c/fields/ShelterPostalCode__c.field-meta.xml
<CustomField>
    <fullName>ShelterPostalCode__c</fullName>
    <label>Postal code</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>