Thesis/force-app/main/default/objects/Shelter__c/fields/ShelterStreet__c.field-meta.xml
<CustomField>
    <fullName>ShelterStreet__c</fullName>
    <label>Street</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>