Thesis/force-app/main/default/objects/Shelter__c/validationRules/Postal_code_validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Postal_code_validation</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(REGEX(ShelterPostalCode__c, &quot;(?i)^[a-z0-9][a-z0-9\\- ]{0,10}[a-z0-9]$&quot;))</errorConditionFormula>
    <errorDisplayField>ShelterPostalCode__c</errorDisplayField>
    <errorMessage>Wrong postal code</errorMessage>
</ValidationRule>